--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,23 @@
-language: common-lisp
+dist: xenial
+language: c
 sudo: required
+
+compiler: gcc
 
 env:
   matrix:
     - LISP=sbcl-bin
     - LISP=ccl-bin
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install -y libzmq3-dev python3 python3-pip python3-setuptools
+  - export PATH=~/.roswell/bin:$PATH
+
 install:
+  - sudo pip3 install jupyter jupyter_kernel_test
   - curl -L https://raw.githubusercontent.com/snmsts/roswell/release/scripts/install-for-ci.sh | sh
   - ros install ./cl-jupyter.asd
 
 script:
-  - python tests/client.py
+  - python3 tests/client.py
