--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 dist: xenial
-sudo: false
 language: c
 compiler: gcc
 
@@ -32,7 +31,8 @@ env:
     - LISP=sbcl-bin
 
 install:
-  - pip3 install --user jupyter jupyter_kernel_test
+  - if [[ "${TRAVIS_OS_NAME:-}" == "linux" ]]; then pyenv global 3.7.1; fi
+  - pip3 install wheel jupyter jupyter_kernel_test
   - curl -L https://raw.githubusercontent.com/snmsts/roswell/release/scripts/install-for-ci.sh | sh
   - ros install ./common-lisp-jupyter.asd
 
