--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ env:
     - PATH=~/.roswell/bin:$PATH
     - ROSWELL_INSTALL_DIR=$HOME/.roswell
   matrix:
+    - METHOD=im LISP=sbcl
     - METHOD=ros LISP=ccl-bin
     - METHOD=ros LISP=ecl
     - METHOD=ros LISP=sbcl-bin
@@ -35,6 +36,8 @@ env:
 
 matrix:
   exclude:
+    - os: osx
+      env: METHOD=im LISP=sbcl
     - os: osx
       env: METHOD=ros LISP=ecl
     - os: osx
