--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ addons:
   apt:
     update: true
     packages:
+      - g++-multilib
       - libzmq3-dev
+      - libzmq3-dev:i386
       - python3
       - python3-pip
       - python3-setuptools
@@ -30,6 +32,7 @@ env:
   matrix:
     - METHOD=im LISP=sbcl
     - METHOD=ros LISP=ccl-bin
+    - METHOD=ros LISP=cmu-bin
     - METHOD=ros LISP=ecl
     - METHOD=ros LISP=sbcl-bin
     - METHOD=sys LISP=sbcl
@@ -38,6 +41,8 @@ matrix:
   exclude:
     - os: osx
       env: METHOD=im LISP=sbcl
+    - os: osx
+      env: METHOD=ros LISP=cmu-bin
     - os: osx
       env: METHOD=ros LISP=ecl
     - os: osx
