--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ env:
     - ROSWELL_INSTALL_DIR=$HOME/.roswell
   matrix:
     - METHOD=img LISP=sbcl
+    - METHOD=ros LISP=abcl-bin
     - METHOD=ros LISP=ccl-bin
     - METHOD=ros LISP=cmu-bin
     - METHOD=ros LISP=ecl
