--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ addons:
       - libzmq3-dev
       - libzmq3-dev:i386
       - maven
+      - openjdk-8-jdk
       - python3
       - python3-pip
       - python3-setuptools
