--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,9 @@ jobs:
     - name: ubuntu specific
       if: matrix.os == 'ubuntu-latest'
       shell: bash
-      run: sudo apt-get install libzmq3-dev
+      run: |
+      	echo "$HOME/.local/bin" >> $GITHUB_PATH
+      	sudo apt-get install libzmq3-dev
 
     # Check out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
