--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,9 @@ defaults:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test:
-    name: ${{ matrix.lisp }} on ${{ matrix.os }}
+    name: ${{ matrix.os }}
     strategy:
       matrix:
-        lisp: [sbcl-bin, ccl]
         os: [ubuntu-latest]
 
     # run the job on every combination of "lisp" and "os" above
@@ -37,8 +36,8 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get install libzmq3-dev
+        echo "$HOME/.roswell/bin" >> $GITHUB_PATH
 
-    # Check out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
     - name: Set up Python
@@ -50,26 +49,15 @@ jobs:
       run: pip install --upgrade pip setuptools wheel jupyter jupyter_kernel_test
 
     - name: install roswell
-      # always run install, since it does some global installs and setup that isn't cached
-      env:
-       LISP: ${{ matrix.lisp }}
       run: |
         curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh -x
-        echo "$HOME/.roswell/bin" >> $GITHUB_PATH
-
-    - name: run lisp
-      continue-on-error: true
-      run: |
-        ros -e '(format t "~a:~a on ~a~%...~%~%" (lisp-implementation-type) (lisp-implementation-version) (machine-type))'
-        ros -e '(format t " fixnum bits:~a~%" (integer-length most-positive-fixnum))'
-        ros -e "(ql:quickload 'trivial-features)" -e '(format t "features = ~s~%" *features*)'
-
-    - name: update ql dist if we have one cached
-      run: ros -e "(ql:update-all-dists :prompt nil)"
+        ros install ccl-bin
 
     - name: install code
       continue-on-error: true
-      run: ros install ./common-lisp-jupyter.asd
+      run: |
+        ros install ./common-lisp-jupyter.asd
+        ros run --lisp ccl-bin --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:roswell-install "ccl-bin")'
 
     - name: load code and run tests
       run: python tests/client.py
