Only install binary implementations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,10 +46,11 @@ jobs:
       run: |
         pip install --upgrade pip setuptools wheel jupyter jupyter_kernel_test
         curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh -x
-        ros install ecl
         ros install ccl-bin
         ros install cmu-bin
         ros use sbcl-bin
+        ros version
+        ros list installed
 
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -58,7 +59,6 @@ jobs:
       continue-on-error: true
       run: |
         ros install ./common-lisp-jupyter.asd
-        ros run --lisp ecl --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:roswell-install "ecl")'
         ros run --lisp ccl-bin --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:roswell-install "ccl-bin")'
         ros run --lisp cmu-bin --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:roswell-install "cmu-bin")'
 
