--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,11 @@ jobs:
         pip install --upgrade pip setuptools wheel jupyter jupyter_kernel_test
         curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh -x
         ros install ccl-bin
-        ros install cmu-bin
         ros use sbcl-bin
+
+    - name: System information
+      run: |
+        jupyter --version
         ros version
         ros list installed
 
@@ -60,7 +63,6 @@ jobs:
       run: |
         ros install ./common-lisp-jupyter.asd
         ros run --lisp ccl-bin --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:roswell-install "ccl-bin")'
-        ros run --lisp cmu-bin --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:roswell-install "cmu-bin")'
 
     - name: Run kernel tests
       run: |
