--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: ci
 
 # Controls when the action will run. Triggers the workflow on push for any branch, and
 # pull requests to master
