Add macos to CI (#60)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
     name: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os:
+        - macos-latest
+        - ubuntu-latest
 
     # run the job on every combination of "os" above
     runs-on: ${{ matrix.os }}
@@ -35,6 +37,12 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get install libzmq3-dev
+        echo "$HOME/.roswell/bin" >> $GITHUB_PATH
+
+    - name: MacOs specific
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install czmq
         echo "$HOME/.roswell/bin" >> $GITHUB_PATH
 
     - name: Set up Python
