--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
     - name: Install Jupyter kernels (CCL, SBCL)
       continue-on-error: true
       run: |
+        mkdir -p $HOME/.config/common-lisp
         echo "(:source-registry (:tree (\"$(PWD)\")) :inherit-configuration)" >$HOME/.config/common-lisp/source-registry.conf
         curl -kLO https://beta.quicklisp.org/quicklisp.lisp
         sbcl --non-interactive --load scripts/ql-install.lisp
