--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,10 @@ jobs:
       continue-on-error: true
       run: |
         mkdir -p $HOME/.config/common-lisp
-        echo "(:source-registry (:tree (\"$(PWD)\")) :inherit-configuration)" >$HOME/.config/common-lisp/source-registry.conf
+        echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$HOME/.config/common-lisp/source-registry.conf
         curl -kLO https://beta.quicklisp.org/quicklisp.lisp
-        sbcl --non-interactive --load scripts/ql-install.lisp
+        sbcl --non-interactive --load quicklisp.lisp --eval '(ql-util:without-prompting (ql:add-to-init-file))'
+        sbcl --non-interactive --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:install :use-implementation t :bin-path "sbcl")'
 #        ros run --lisp ccl-bin --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:roswell-install "ccl-bin")'
 
     # - name: Install Jupyter kernels (ECL)
