--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,13 +54,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Jupyter kernels (CCL, SBCL)
-      continue-on-error: true
       run: |
         mkdir -p $HOME/.config/common-lisp
         echo "(:source-registry (:tree (\"$PWD\")) :inherit-configuration)" >$HOME/.config/common-lisp/source-registry.conf
         curl -kLO https://beta.quicklisp.org/quicklisp.lisp
-        sbcl --non-interactive --load quicklisp.lisp --eval '(quicklisp-quickstart:install)' --eval '(ql-util:without-prompting (ql:add-to-init-file))'
-        sbcl --non-interactive --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:install :use-implementation t :bin-path "sbcl")'
+        sbcl --non-interactive --load scripts/usr-install.lisp sbcl
 #        ros run --lisp ccl-bin --eval '(ql:quickload :common-lisp-jupyter)' --eval '(clj:roswell-install "ccl-bin")'
 
     # - name: Install Jupyter kernels (ECL)
