--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Install CCL kernel
       if: matrix.os == 'macos-latest'
       run: |
-        ccl --batch --load scripts/usr-install.lisp
+        ccl64 --batch --load scripts/usr-install.lisp
 
     # - name: Install ECL Jupyter kernel
     #   if: matrix.os == 'ubuntu-latest'
