--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     defaults:
       run:
-        shell: bash -l {0}
+        shell: bash
 
     strategy:
       matrix:
@@ -33,6 +33,7 @@ jobs:
 
     - name: Install Windows dependencies
       if: matrix.os == 'windows-latest'
+      shell: bash -l {0}
       run: |
         git config --global core.autocrlf false
         conda install -c conda-forge m2w64-gcc m2w64-zeromq
@@ -62,6 +63,7 @@ jobs:
 
     - name: Install Jupyter via conda
       if: matrix.os == 'windows-latest'
+      shell: bash -l {0}
       run: |
         conda install -c conda-forge jupyterlab
         jupyter --version
