--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         shell: bash
 
     strategy:
+      fail-fast: false
       matrix:
         os:
         - macos-latest
@@ -37,8 +38,8 @@ jobs:
       run: |
         git config --global core.autocrlf false
         conda install -c conda-forge m2w64-gcc m2w64-zeromq
-        wget http://downloads.sourceforge.net/project/sbcl/sbcl/2.0.0/sbcl-2.0.0-x86-64-windows-binary.msi
-        msiexec /i sbcl-2.0.0-x86-64-windows-binary.msi /quiet /qn
+        curl http://downloads.sourceforge.net/project/sbcl/sbcl/2.0.0/sbcl-2.0.0-x86-64-windows-binary.msi --output sbcl.msi
+        msiexec /i sbcl.msi /quiet /qn
 
     - name: Install Ubuntu dependencies
       if: matrix.os == 'ubuntu-latest'
